<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parkingpic2"
    tools:context=".MainActivityLogin">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="573dp"
        android:background="@drawable/logocarapp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:background="@drawable/loginpagestuff"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="99dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="516dp"
        android:gravity="center"
        android:text="P O O J A N A P P"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:textStyle="bold"
        android:layout_marginLeft="98dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="306dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="707dp"
        android:gravity="center"
        android:text="@string/a_smart_car_parking_application"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="452dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="137dp"
        android:layout_height="61dp"
        android:background="@drawable/loginpagestuff"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="186dp"
        android:text="@string/log_in"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="274dp"
        android:layout_height="142dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="74dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/unnamed" />
</RelativeLayout>